--- a/src/styles/LeaderboardSnap.css
+++ b/src/styles/LeaderboardSnap.css
@@ -1,3 +1,29 @@
+@media (max-width: 600px) {
+  .view-all-leaderboards-button {
+    margin-left: 10%;
+    margin-right: 10%;
+    font-size: 0.7em;
+    background-color: white;
+    color: rgb(235, 38, 32, 1);
+    border: none;
+    width: 20vw;
+    height: 2.5vh;
+  }
+}
+
+@media (min-width: 601px) {
+  .view-all-leaderboards-button {
+    margin-left: 10%;
+    margin-right: 10%;
+    font-size: 0.75em;
+    background-color: white;
+    color: rgb(235, 38, 32, 1);
+    border: none;
+    width: 15vw;
+    height: 2.5vh;
+  }
+}
+
 .leaderboard-snap-container {
   display: flex;
   flex-flow: column nowrap;
@@ -56,17 +82,6 @@
 
 .level-high-scores {
   font-size: 1em;
-}
-
-.view-all-leaderboards-button {
-  margin-left: 10%;
-  margin-right: 10%;
-  font-size: 0.75em;
-  background-color: white;
-  color: rgb(235, 38, 32, 1);
-  border: none;
-  width: 15vw;
-  height: 2.5vh;
 }
 
 .view-all-leaderboards-button:hover {
